# backend/app.js
@@ -5,6 +5,7 @@ const bodyParser = require('body-parser');
 const cors = require('cors');
 const bookingRoutes = require('./routes/bookings');
 const swaggerUi = require('swagger-ui-express');
+const marketingRoutes = require('./routes/marketing');
 const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./swagger.yaml');
 const app = express();
@@ -14,7 +15,7 @@ app.use(bodyParser.json());
 app.use(cors());
 app.use('/api/bookings', bookingRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
+app.use('/api/marketing', marketingRoutes);
 // MongoDB connection
 mongoose
   .connect(process.env.MONGO_URI)
